.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:28:10 **** Incremental Build of configuration Debug for project Project2_Starter ****
make all 
make: Nothing to be done for 'all'.
17:30:15 **** Incremental Build of configuration Debug for project Project2_Starter ****
make all 
make: Nothing to be done for 'all'.
17:30:16 **** Incremental Build of configuration Debug for project crypto ****
make all 
make: Nothing to be done for 'all'.
17:30:16 **** Incremental Build of configuration Debug for project crypto_test ****
make all 
make: Nothing to be done for 'all'.
17:30:17 **** Incremental Build of configuration Debug for project datastore ****
make all 
Building file: ../src/data_store.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -pthread -I"/home/waida/workspace/final_project/crypto" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/data_store.d" -MT"src/data_store.o" -o "src/data_store.o" "../src/data_store.cpp"
../src/data_store.cpp: In member function ‘bool DataStore::decrypt(std::__cxx11::string&)’:
../src/data_store.cpp:21:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
../src/data_store.cpp: In member function ‘bool DataStore::encrypt(std::__cxx11::string&)’:
../src/data_store.cpp:27:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
make: *** [src/data_store.o] Error 1
src/subdir.mk:24: recipe for target 'src/data_store.o' failed
17:30:17 **** Incremental Build of configuration Debug for project stringdatabase ****
make all 
make: Nothing to be done for 'all'.
17:30:18 **** Incremental Build of configuration Debug for project MED_Tester ****
make all 
make: Nothing to be done for 'all'.
17:44:05 **** Incremental Build of configuration Debug for project Project2_Starter ****
make all 
Building file: ../src/array_functions.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/array_functions.d" -MT"src/array_functions.o" -o "src/array_functions.o" "../src/array_functions.cpp"
Finished building: ../src/array_functions.cpp
 
Building target: Project2_Starter.exe
Invoking: GCC C++ Linker
g++  -o "Project2_Starter.exe"  ./src/Project2.o ./src/array_functions.o ./src/utilities.o   
Finished building target: Project2_Starter.exe
 
17:44:07 **** Incremental Build of configuration Debug for project crypto ****
make all 
make: Nothing to be done for 'all'.
17:44:07 **** Incremental Build of configuration Debug for project crypto_test ****
make all 
make: Nothing to be done for 'all'.
17:44:08 **** Incremental Build of configuration Debug for project datastore ****
make all 
Building file: ../src/data_store.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -pthread -I"/home/waida/workspace/final_project/crypto" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/data_store.d" -MT"src/data_store.o" -o "src/data_store.o" "../src/data_store.cpp"
../src/data_store.cpp: In member function ‘bool DataStore::decrypt(std::__cxx11::string&)’:
../src/data_store.cpp:21:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
../src/data_store.cpp: In member function ‘bool DataStore::encrypt(std::__cxx11::string&)’:
../src/data_store.cpp:27:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
make: *** [src/data_store.o] Error 1
src/subdir.mk:24: recipe for target 'src/data_store.o' failed
17:44:08 **** Incremental Build of configuration Debug for project stringdatabase ****
make all 
make: Nothing to be done for 'all'.
17:44:08 **** Incremental Build of configuration Debug for project MED_Tester ****
make all 
make: Nothing to be done for 'all'.
17:48:29 **** Incremental Build of configuration Debug for project Project2_Starter ****
make all 
make: Nothing to be done for 'all'.
17:48:29 **** Incremental Build of configuration Debug for project crypto ****
make all 
make: Nothing to be done for 'all'.
17:48:30 **** Incremental Build of configuration Debug for project crypto_test ****
make all 
make: Nothing to be done for 'all'.
17:48:30 **** Incremental Build of configuration Debug for project datastore ****
make all 
Building file: ../src/data_store.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -pthread -I"/home/waida/workspace/final_project/crypto" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/data_store.d" -MT"src/data_store.o" -o "src/data_store.o" "../src/data_store.cpp"
../src/data_store.cpp: In member function ‘bool DataStore::decrypt(std::__cxx11::string&)’:
../src/data_store.cpp:21:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
../src/data_store.cpp: In member function ‘bool DataStore::encrypt(std::__cxx11::string&)’:
../src/data_store.cpp:27:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
src/subdir.mk:24: recipe for target 'src/data_store.o' failed
make: *** [src/data_store.o] Error 1
17:48:30 **** Incremental Build of configuration Debug for project stringdatabase ****
make all 
make: Nothing to be done for 'all'.
17:48:31 **** Incremental Build of configuration Debug for project MED_Tester ****
make all 
make: Nothing to be done for 'all'.
17:53:48 **** Incremental Build of configuration Debug for project Project2_Starter ****
make all 
make: Nothing to be done for 'all'.
17:53:48 **** Incremental Build of configuration Debug for project crypto ****
make all 
make: Nothing to be done for 'all'.
17:53:48 **** Incremental Build of configuration Debug for project crypto_test ****
make all 
make: Nothing to be done for 'all'.
17:53:48 **** Incremental Build of configuration Debug for project datastore ****
make all 
Building file: ../src/data_store.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -pthread -I"/home/waida/workspace/final_project/crypto" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/data_store.d" -MT"src/data_store.o" -o "src/data_store.o" "../src/data_store.cpp"
../src/data_store.cpp: In member function ‘bool DataStore::decrypt(std::__cxx11::string&)’:
../src/data_store.cpp:21:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
../src/data_store.cpp: In member function ‘bool DataStore::encrypt(std::__cxx11::string&)’:
../src/data_store.cpp:27:25: error: void value not ignored as it ought to be
   return myString.clear();
                         ^
src/subdir.mk:24: recipe for target 'src/data_store.o' failed
make: *** [src/data_store.o] Error 1
17:53:49 **** Incremental Build of configuration Debug for project stringdatabase ****
make all 
make: Nothing to be done for 'all'.
17:53:49 **** Incremental Build of configuration Debug for project MED_Tester ****
make all 
make: Nothing to be done for 'all'.
